--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "css-loader": "*",
         "element-ui": "^2.15.0",
         "mavon-editor": "^2.6.17",
+        "moment": "^2.29.1",
         "vue": "^2.5.2",
         "vue-cropperjs": "^3.0.0",
         "vue-quill-editor": "^3.0.6",
